--- a/components/Main/Main.module.scss
+++ b/components/Main/Main.module.scss
@@ -138,3 +138,16 @@
     left: -19px;
   }
 }
+
+@media screen and (max-height: 425px) {
+  .wrapper {
+    left: calc(8vw - 10px);
+    bottom: calc(8vw - 10px);
+  }
+}
+
+@media screen and (max-height: 425px) and (max-width: 844px) {
+  .container {
+    border: none;
+  }
+}
